--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.7"
 
 services:
   app:
-    image: embarkstudios/wireguard-ui:latest
+    build:
+      context: /root/wg-ui
+      dockerfile: Dockerfile
     entrypoint: "/wireguard-ui"
     privileged: true
     network_mode: "host"
@@ -12,11 +14,8 @@ services:
       - WIREGUARD_UI_LISTEN_ADDRESS=:8080
       - WIREGUARD_UI_LOG_LEVEL=debug
       - WIREGUARD_UI_DATA_DIR=/data
-      - WIREGUARD_UI_WG_ENDPOINT=your-andpoint-address:51820
-      - WIREGUARD_UI_CLIENT_IP_RANGE=192.168.10.0/24
-     # - WIREGUARD_UI_WG_DNS=192.168.10.0
-      - WIREGUARD_UI_NAT=true
-      - WIREGUARD_UI_NAT_DEVICE=eth0
-     # - WIREGUARD_UI_WG_DEVICE_NAME=wg0
+      - WIREGUARD_UI_WG_ENDPOINT=vpn.ascendntnu.no:51820
+      - WIREGUARD_UI_CLIENT_IP_RANGE=192.168.68.1/22
+      - WIREGUARD_UI_NAT=false
+      - WIREGUARD_UI_WG_DEVICE_NAME=wg1
 
-    restart: always
